@@ -1,5 +1,10 @@
 2004-12-21  Rodrigo Moya <rodrigo@novell.com>
 
+	* gui/e-cal-model.c (set_instance_times): no need to convert times now.
+	(add_instance_cb): no need to convert here.
+
+2004-12-21  Rodrigo Moya <rodrigo@novell.com>
+
 	Merge from recurrences-work-branch
 
 	* gui/e-cal-model.c (free_comp_data): renamed to
